scaleway-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: teleport-tls
  namespace: teleport
spec:
  ingressClassName: nginx
  rules:
  - host: teleport.thinkahead.dev
    http:
      paths:
      - backend:
          service:
            name: teleport-cluster
            port:
              number: 3080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - teleport.thinkahead.dev
    secretName: teleport-tls
